# easylib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: adaptive_pooling_public.h  eltwise_public.h  fuse_public.h  matmul_public.h
src/: CMakeLists.txt  adaptive_pooling_private.h  adaptive_pooling_wrapper.cpp  eltwise_private.h  eltwise_wrapper.cpp  fuse_private.h  matmul_private.h  matmul_wrapper.cpp
src/avx2/: adaptive_pooling_avx2.cpp  eltwise_avx2.cpp  fuse_avx2.cpp  matmul_avx2.cpp
src/avx512/: adaptive_pooling_avx512.cpp  eltwise_avx512.cpp  fuse_avx512.cpp  matmul_avx512.cpp
src/sse42/: adaptive_pooling_sse4.2.cpp  eltwise_sse4.2.cpp  fuse_sse42.cpp  matmul_sse42.cpp
test/: CMakeLists.txt  test_eltwise.cpp  test_matmul.cpp
